tests/parser/should_fail/double_tau_priority_over.csp
assert STOP [T= STOP :[tau priority over]: {} :[tau priority over]: {}